infrastructure/observability-ui/grafana/ingressroute-default-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.brmartin.co.uk`)
    middlewares: []
    services:
    - name: grafana
      port: http
  tls:
    secretName: wildcard-brmartin-tls
